prevent scrollbar in my old laptop

--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ body {
 }
 #result,
 .css {
-  padding: 3em 2em;
+  padding: 2.9em 2em;
 }
 #result {
   margin-top: -0.8em;
